[package]
name = "bufstream"
version = "0.3.0"
edition = "2021"
authors = ["The Rust Project Developers", "Saul Hazledine"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/bufstream"
homepage = "https://github.com/alexcrichton/bufstream"
documentation = "https://docs.rs/bufstream"
description = """
Buffered I/O for streams where each read/write half is separately buffered
"""

